formatting and fixing warns